--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@ body, ul {
 body {
   font-family: 'Noto Serif JP', serif;
   color: #222;
+  opacity: 0;
+  transition: opacity 0.6s linear;
+}
+body.wakaru {
+  opacity: 1;
 }
 h1 {
   margin: 0 0 4rem;
@@ -72,11 +77,11 @@ li {
     transform: translateX(0);
     animation-timing-function: linear;
   }
-  95% {
+  94% {
     transform: translateX(-100%);
     animation-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
   }
-  100% {
+  98%, 100% {
     transform: translateX(0);
   }
 }
@@ -153,5 +158,10 @@ li {
       </div>
     </div>
   </div>
+  <script>
+    setTimeout(function() {
+      document.body.classList.add('wakaru')
+    }, 1000);
+  </script>
 </body>
 </html>
