--- a/index.html
+++ b/index.html
@@ -21,24 +21,36 @@ body, ul {
 }
 body {
   font-family: 'Noto Serif JP', serif;
-  color: #222;
-  opacity: 0;
-  transition: opacity 0.6s linear;
+  color: #333;
 }
-body.wakaru {
-  opacity: 1;
+body:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0%;
+  background-color: #fff;
+  pointer-events: none;
+}
+body.wakaru:after {
+  transition: opacity 1s 0.2s linear;
+  opacity: 0;
+}
+body.wakaru .c {
+  animation: kimura-kaela 60s linear infinite;
 }
 h1 {
   margin: 0 0 4rem;
   padding: 0 0 0 4rem;
-  font-size: 2.4rem;
+  font-size: 2.2rem;
   line-height: 1.7;
   letter-spacing: 0.4em;
   font-weight: normal;
 }
 ul {
   display: inline-flex;
-  padding: 0 4rem;
+  padding: 0 3.4rem;
   white-space: nowrap;
   list-style-type: none;
 }
@@ -47,7 +59,7 @@ ul + ul {
 }
 li {
   margin: 0 0.4em;
-  font-size: 2rem;
+  font-size: 1.8rem;
   letter-spacing: 0.25em;
 }
 .a {
@@ -59,7 +71,6 @@ li {
 }
 .c {
   display: inline-block;
-  animation: kimura-kaela 60s linear infinite;
 }
 @media screen and (min-width: 768px) {
   html {
@@ -69,7 +80,7 @@ li {
     padding: 0 0 0 6rem;
   }
   ul {
-    padding: 0 6rem;
+    padding: 0 5.5rem;
   }
 }
 @keyframes kimura-kaela {
@@ -161,7 +172,7 @@ li {
   <script>
     setTimeout(function() {
       document.body.classList.add('wakaru')
-    }, 1000);
+    }, 800);
   </script>
 </body>
 </html>
