サブセットの自動化

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,12 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>わからないけどわかる</title>
 <meta name="keywords" content="木村カエラ">
-<link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP:200&display=swap" rel="stylesheet">
 <style>
+  @font-face {
+  font-family: "Noto Serif JP";
+  font-display: swap;
+  src: url(/fonts/noto-serif-sub.woff2) format("woff2"), url(/fonts/noto-serif-sub.woff) format("woff");
+}
 html,
 body {
   width: 100%;
