--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@ body.wakaru:after {
   opacity: 0;
 }
 h1 {
+  margin: 0;
   font-size: 2rem;
   line-height: 1.7;
   letter-spacing: 0.4em;
@@ -118,7 +119,7 @@ button.is-playing:after {
   overflow: hidden;
 }
 .b {
-  margin: 0 0 3.2rem;
+  margin: 0 0 3.3rem;
   padding: 0 0 2.8rem 4rem;
   display: flex;
   align-items: center;
