--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
 :root {
   --color-font: #1a1a1a;
   --color-white: #fff;
-  --border-width-sp: 4px;
-  --border-width-pc: 6px;
+  --border-width-sp: 2px;
+  --border-width-pc: 4px;
 }
 html,
 body {
@@ -42,7 +42,6 @@ body {
   overflow: hidden;
   font-family: 'noto-serif', serif;
   color: var(--color-font);
-  background-color: var(--color-white);
 }
 body:after {
   content: "";
@@ -90,7 +89,7 @@ ul {
   will-change: transform;
 }
 li {
-  margin: 0 0.3em;
+  margin: 0 0.2em;
   font-size: calc(100vh / (6 * 3));
   letter-spacing: 0.18em;
   line-height: 2.2;
@@ -104,16 +103,16 @@ a:visited {
   text-decoration: none;
 }
 svg {
-  width: 8rem;
+  width: 6rem;
+  margin: 0 -0.2rem -0.2rem 0;
   height: auto;
-  margin-left: -0.3rem;
   fill: var(--color-font);
 }
 button {
-  width: 8rem;
-  height: 8rem;
+  width: 7rem;
+  height: 7rem;
   position: relative;
-  margin: 0 0.8rem 0 0;
+  margin: 0 0 2.7rem 2.5rem;
   padding: 0;
   border: 0;
   border-radius: 50%;
@@ -127,8 +126,8 @@ button:before {
   width: 0;
   height: 0;
   position: absolute;
-  top: 30%;
-  left: 34%;
+  top: 28%;
+  left: 33%;
   border-style: solid;
   border-width: 0 18px 32px 18px;
   border-color: transparent transparent var(--color-white) transparent;
@@ -153,20 +152,15 @@ button:after {
   width: 18rem;
   height: 18rem;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
   overflow: hidden;
   position: absolute;
   z-index: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
+  bottom: 2rem;
+  right: 2rem;
   z-index: 1;
-  background-color: var(--color-white);
   border: var(--border-width-sp) solid var(--color-font);
-  border-radius: 16px;
 }
 .b {
   overflow: hidden;
@@ -186,27 +180,31 @@ button:after {
     letter-spacing: 0.25em;
   }
   svg {
-    width: 7.4rem;
+    width: 5.2rem;
   }
   button {
-    width: 7rem;
-    height: 7rem;
-    margin-right: 1.2rem;
+    width: 6rem;
+    height: 6rem;
+    margin: 0 0 2.3rem 1.8rem;
     border-width: var(--border-width-pc);
   }
   button:before {
-    top: 30%;
-    left: 34%;
-    border-width: 0 26px 46px 26px;
+    top: 29%;
+    left: 35%;
+    border-width: 0 24px 42px 24px;
   }
   button:after {
     width: 0.7rem;
+    height: 2.6rem;
+    border-left-width: 0.8rem;
+    border-right-width: 0.8rem;
   }
   .a {
-    width: 17rem;
-    height: 17rem;
+    width: 15rem;
+    height: 15rem;
+    bottom: 2rem;
+    right: 2rem;
     border-width: var(--border-width-pc);
-    border-radius: 24px;
   }
 }
 @keyframes kimura-kaela {
@@ -229,8 +227,8 @@ button:after {
 </head>
 <body>
   <div class="a">
-    <svg xmlns="http://www.w3.org/2000/svg" width="33" height="75" viewBox="0 0 33 75"><path d="M14.28,2.33A11.24,11.24,0,0,0,14.1.17h4.53a14.76,14.76,0,0,0-.18,2.16V4.64h9.69a17.24,17.24,0,0,0,2.15-.11V6.18c-.36,0-.5-.07-.68-.07l-.5,0H22L26.37,7.8l-.93,1a57.71,57.71,0,0,1-4.22,5L21,14h9a17.85,17.85,0,0,0,2.16-.1v1.65c-.36,0-.51-.07-.69-.07l-.5,0H2.79A14,14,0,0,0,1,15.54V13.89a13.32,13.32,0,0,0,2.15.1H9.09L9,12.81A39.5,39.5,0,0,0,7.8,7.69l-.43-1,1.11-.62H4.67a14,14,0,0,0-1.8.11V4.53A12.18,12.18,0,0,0,5,4.64h9.25ZM27.24,18a15.92,15.92,0,0,0-.18,2.91V29A16.3,16.3,0,0,0,27.24,32l-.94,0a17.44,17.44,0,0,0-1.76-.07H8.48l-.9,0a5,5,0,0,0-.65,0c-.64,0-.68,0-1,0A16.78,16.78,0,0,0,6.11,29V20.9A16.59,16.59,0,0,0,5.93,18c1.08.07,1.94.11,2.7.11H24.54A16.19,16.19,0,0,0,26.19,18L27,18ZM9.31,6.83a37,37,0,0,1,3.45,4.25l.91,1L9.67,14h9.39A56.5,56.5,0,0,0,21.4,7.48l.22-1.41H8.73Zm.9,12.71V24H23V19.54Zm0,5.9v5H23v-5Z"/><path d="M9.35,53.58l-.76.72a31.77,31.77,0,0,1-5.11,5l-.83.72L.13,56.39l1.12-.29A38.52,38.52,0,0,0,7.65,53l.72-.57Zm11.48-7.41a19.37,19.37,0,0,0,2.7-.11,15.76,15.76,0,0,0-.18,2.88v7.23a15.76,15.76,0,0,0,.18,2.88A21.12,21.12,0,0,0,21.4,59H18.52v3.27H30.08a15.21,15.21,0,0,0,2.16-.14v1.73a14.91,14.91,0,0,0-2.16-.15H19.6a27.79,27.79,0,0,0,11.31,5.76l1.72.29-2.77,4.21-1.26-.76a28.28,28.28,0,0,1-10.08-8.45v7.66a15.5,15.5,0,0,0,.18,2.16H14.24l0-.36a11,11,0,0,0,.14-1.8V66.43A31.76,31.76,0,0,1,2,73.85l-1.18.47L.24,73.13l1.26-.47a28.84,28.84,0,0,0,10.08-9H2.79c-.75,0-.82,0-1.87.15V62.08a15.21,15.21,0,0,0,2.16.14H14.42V59H11.94c-.94,0-1.26,0-2.23.1a16.15,16.15,0,0,0,.18-2.88V48.94a13.28,13.28,0,0,0-.18-2.88,24.84,24.84,0,0,0,2.7.11H14a23.48,23.48,0,0,0,.83-3.28l.1-1.11,5,.9-1,.79c-.79.83-1.91,1.91-2.81,2.7Zm-18-.94a49.73,49.73,0,0,1,5.08,2.63l.9.43-3.32,3.6-.5-1a33.92,33.92,0,0,0-3.35-4.5l-.72-.68,1-1.05Zm10.73,2.38v4.1h6.12v-4.1Zm0,5.54v4.36h6.12V53.15Zm19.26-5.43-1,.46a29.22,29.22,0,0,1-6,2.77l-.83.44-.86-1.23.75-.54a27.06,27.06,0,0,0,3.85-4.32l.51-.93ZM25.8,53a45.22,45.22,0,0,1,5.94,2.84l1.08.4-3,3.74-.57-.86a46.83,46.83,0,0,0-4.21-4.75l-.87-.72L25,52.54Z"/></svg>
     <button type="button" aria-label="音楽を再生する"></button>
+    <svg xmlns="http://www.w3.org/2000/svg" width="33" height="75" viewBox="0 0 33 75"><path d="M14.28,2.33A11.24,11.24,0,0,0,14.1.17h4.53a14.76,14.76,0,0,0-.18,2.16V4.64h9.69a17.24,17.24,0,0,0,2.15-.11V6.18c-.36,0-.5-.07-.68-.07l-.5,0H22L26.37,7.8l-.93,1a57.71,57.71,0,0,1-4.22,5L21,14h9a17.85,17.85,0,0,0,2.16-.1v1.65c-.36,0-.51-.07-.69-.07l-.5,0H2.79A14,14,0,0,0,1,15.54V13.89a13.32,13.32,0,0,0,2.15.1H9.09L9,12.81A39.5,39.5,0,0,0,7.8,7.69l-.43-1,1.11-.62H4.67a14,14,0,0,0-1.8.11V4.53A12.18,12.18,0,0,0,5,4.64h9.25ZM27.24,18a15.92,15.92,0,0,0-.18,2.91V29A16.3,16.3,0,0,0,27.24,32l-.94,0a17.44,17.44,0,0,0-1.76-.07H8.48l-.9,0a5,5,0,0,0-.65,0c-.64,0-.68,0-1,0A16.78,16.78,0,0,0,6.11,29V20.9A16.59,16.59,0,0,0,5.93,18c1.08.07,1.94.11,2.7.11H24.54A16.19,16.19,0,0,0,26.19,18L27,18ZM9.31,6.83a37,37,0,0,1,3.45,4.25l.91,1L9.67,14h9.39A56.5,56.5,0,0,0,21.4,7.48l.22-1.41H8.73Zm.9,12.71V24H23V19.54Zm0,5.9v5H23v-5Z"/><path d="M9.35,53.58l-.76.72a31.77,31.77,0,0,1-5.11,5l-.83.72L.13,56.39l1.12-.29A38.52,38.52,0,0,0,7.65,53l.72-.57Zm11.48-7.41a19.37,19.37,0,0,0,2.7-.11,15.76,15.76,0,0,0-.18,2.88v7.23a15.76,15.76,0,0,0,.18,2.88A21.12,21.12,0,0,0,21.4,59H18.52v3.27H30.08a15.21,15.21,0,0,0,2.16-.14v1.73a14.91,14.91,0,0,0-2.16-.15H19.6a27.79,27.79,0,0,0,11.31,5.76l1.72.29-2.77,4.21-1.26-.76a28.28,28.28,0,0,1-10.08-8.45v7.66a15.5,15.5,0,0,0,.18,2.16H14.24l0-.36a11,11,0,0,0,.14-1.8V66.43A31.76,31.76,0,0,1,2,73.85l-1.18.47L.24,73.13l1.26-.47a28.84,28.84,0,0,0,10.08-9H2.79c-.75,0-.82,0-1.87.15V62.08a15.21,15.21,0,0,0,2.16.14H14.42V59H11.94c-.94,0-1.26,0-2.23.1a16.15,16.15,0,0,0,.18-2.88V48.94a13.28,13.28,0,0,0-.18-2.88,24.84,24.84,0,0,0,2.7.11H14a23.48,23.48,0,0,0,.83-3.28l.1-1.11,5,.9-1,.79c-.79.83-1.91,1.91-2.81,2.7Zm-18-.94a49.73,49.73,0,0,1,5.08,2.63l.9.43-3.32,3.6-.5-1a33.92,33.92,0,0,0-3.35-4.5l-.72-.68,1-1.05Zm10.73,2.38v4.1h6.12v-4.1Zm0,5.54v4.36h6.12V53.15Zm19.26-5.43-1,.46a29.22,29.22,0,0,1-6,2.77l-.83.44-.86-1.23.75-.54a27.06,27.06,0,0,0,3.85-4.32l.51-.93ZM25.8,53a45.22,45.22,0,0,1,5.94,2.84l1.08.4-3,3.74-.57-.86a46.83,46.83,0,0,0-4.21-4.75l-.87-.72L25,52.54Z"/></svg>
   </div>
   <div class="b">
     <div class="c">
