--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,26 @@
   font-display: swap;
   src: url(/fonts/noto-serif-sub.woff2?d=20200322) format("woff2"), url(/fonts/noto-serif-sub.woff?d=20200322) format("woff");
 }
+
+:root {
+  --color-black: #000;
+  --color-font: #1a1a1a;
+  --color-white: #fff;
+  --border-width-sp: 2px;
+  --border-width-pc: 4px;
+}
+
+::selection {
+  background: none;
+  color: red;
+}
+
 *,
 *:before,
 *:after {
   margin: 0;
   bottom: 0;
   box-sizing: border-box;
-}
-:root {
-  --color-font: #1a1a1a;
-  --color-white: #fff;
-  --border-width-sp: 2px;
-  --border-width-pc: 4px;
 }
 html,
 body {
@@ -32,16 +40,13 @@ body {
 html {
   font-size: 10px;
 }
-body, ul {
-  margin: 0;
-  padding: 0;
-}
 body {
   display: flex;
   align-items: center;
   overflow: hidden;
   font-family: 'noto-serif', serif;
   color: var(--color-font);
+  -webkit-font-smoothing: antialiased;
 }
 body:after {
   content: "";
@@ -59,56 +64,46 @@ body.is-grab {
 body.is-grabbing {
   cursor: grabbing;
 }
-body.wakaru:after {
-  transition: opacity 1s linear;
+body.is-grabbing .poem {
+  pointer-events: none;
+  user-select: none;
+}
+body.is-visible:after {
+  transition: opacity 2s ease;
   opacity: 0;
 }
-body.wakaru .c {
-  transform: translateX(-6rem);
-}
-body.is-playing button:before {
+body.is-playing .jacket__play:before {
   opacity: 0;
 }
-body.is-playing button:after {
+body.is-playing .jacket__play:after {
   opacity: 1;
 }
-body.is-playing ul {
-  animation-play-state: running;
-}
-p {
-  font-size: 3rem;
-  letter-spacing: 0.4em;
-  font-weight: normal;
-}
-ul {
-  display: inline-flex;
-  white-space: nowrap;
-  list-style-type: none;
-  animation: kimura-kaela 59s 0s linear infinite;
-  animation-play-state: paused;
+
+.jacket {
+  width: 18rem;
+  height: 18rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  overflow: hidden;
+  position: absolute;
+  z-index: 0;
+  bottom: 2rem;
+  right: 2rem;
+  z-index: 1;
+  border: var(--border-width-sp) solid var(--color-font);
+  background-color: rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
   will-change: transform;
 }
-li {
-  margin: 0 0.2em;
-  font-size: calc(100vh / (6 * 3));
-  letter-spacing: 0.18em;
-  line-height: 2.2;
-  user-select: none;
-  pointer-events: none;
-}
-a,
-a:hover,
-a:visited {
-  color: inherit;
-  text-decoration: none;
-}
-svg {
+.jacket__logo {
   width: 6rem;
   margin: 0 -0.2rem -0.2rem 0;
   height: auto;
   fill: var(--color-font);
 }
-button {
+.jacket__play {
   width: 7rem;
   height: 7rem;
   position: relative;
@@ -121,7 +116,7 @@ button {
   -webkit-appearance: none;
   cursor: pointer;
 }
-button:before {
+.jacket__play:before {
   content: "";
   width: 0;
   height: 0;
@@ -133,7 +128,7 @@ button:before {
   border-color: transparent transparent var(--color-white) transparent;
   transform: rotate(90deg);
 }
-button:after {
+.jacket__play:after {
   content: "";
   width: 0.8rem;
   height: 3rem;
@@ -148,65 +143,74 @@ button:after {
   border-right: 0.9rem solid var(--color-white);
   box-sizing: content-box;
 }
-.a {
-  width: 18rem;
-  height: 18rem;
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  overflow: hidden;
-  position: absolute;
-  z-index: 0;
-  bottom: 2rem;
-  right: 2rem;
-  z-index: 1;
-  border: var(--border-width-sp) solid var(--color-font);
-}
-.b {
+
+.poem {
   overflow: hidden;
 }
-.c {
+.poem__inner {
   display: inline-block;
   transition: transform 3s cubic-bezier(0.33, 1, 0.68, 1);
+}
+.poem__list {
+  display: inline-flex;
+  white-space: nowrap;
+  list-style-type: none;
+  animation: kimura-kaela 59s -2s linear infinite;
+  will-change: transform;
+}
+.poem__item {
+  margin: 0 0.2em;
+  font-size: calc(100vh / (6 * 3.8));
+  letter-spacing: 0.18em;
+  line-height: 2.3;
+}
+.poem__link,
+.poem__link:hover,
+.poem__link:visited {
+  color: inherit;
+  text-decoration: none;
 }
 
 @media screen and (min-width: 768px) {
   html {
     font-size: 16px;
   }
-  li {
-    font-size: calc(100vh / (6 * 2.6));
-    line-height: 2.4;
-    letter-spacing: 0.25em;
-  }
-  svg {
-    width: 5.2rem;
-  }
-  button {
-    width: 6rem;
-    height: 6rem;
-    margin: 0 0 2.3rem 1.8rem;
-    border-width: var(--border-width-pc);
-  }
-  button:before {
-    top: 29%;
-    left: 35%;
-    border-width: 0 24px 42px 24px;
-  }
-  button:after {
-    width: 0.7rem;
-    height: 2.6rem;
-    border-left-width: 0.8rem;
-    border-right-width: 0.8rem;
-  }
-  .a {
+
+  .jacket {
     width: 15rem;
     height: 15rem;
     bottom: 2rem;
     right: 2rem;
     border-width: var(--border-width-pc);
   }
+  .jacket__logo {
+    width: 5.2rem;
+  }
+  .jacket__play {
+    width: 6rem;
+    height: 6rem;
+    margin: 0 0 2.3rem 1.8rem;
+    border-width: var(--border-width-pc);
+  }
+  .jacket__play:before {
+    top: 29%;
+    left: 35%;
+    border-width: 0 24px 42px 24px;
+  }
+  .jacket__play:after {
+    width: 0.7rem;
+    height: 2.6rem;
+    border-left-width: 0.8rem;
+    border-right-width: 0.8rem;
+  }
+
+  .poem__item {
+    font-size: calc(100vh / (6 * 2.6));
+    line-height: 2.4;
+    letter-spacing: 0.25em;
+  }
 }
+
 @keyframes kimura-kaela {
   0% {
     transform: translate3d(0, 0, 0);
@@ -226,83 +230,86 @@ button:after {
 </style>
 </head>
 <body>
-  <div class="a">
-    <button type="button" aria-label="音楽を再生する"></button>
-    <svg xmlns="http://www.w3.org/2000/svg" width="33" height="75" viewBox="0 0 33 75"><path d="M14.28,2.33A11.24,11.24,0,0,0,14.1.17h4.53a14.76,14.76,0,0,0-.18,2.16V4.64h9.69a17.24,17.24,0,0,0,2.15-.11V6.18c-.36,0-.5-.07-.68-.07l-.5,0H22L26.37,7.8l-.93,1a57.71,57.71,0,0,1-4.22,5L21,14h9a17.85,17.85,0,0,0,2.16-.1v1.65c-.36,0-.51-.07-.69-.07l-.5,0H2.79A14,14,0,0,0,1,15.54V13.89a13.32,13.32,0,0,0,2.15.1H9.09L9,12.81A39.5,39.5,0,0,0,7.8,7.69l-.43-1,1.11-.62H4.67a14,14,0,0,0-1.8.11V4.53A12.18,12.18,0,0,0,5,4.64h9.25ZM27.24,18a15.92,15.92,0,0,0-.18,2.91V29A16.3,16.3,0,0,0,27.24,32l-.94,0a17.44,17.44,0,0,0-1.76-.07H8.48l-.9,0a5,5,0,0,0-.65,0c-.64,0-.68,0-1,0A16.78,16.78,0,0,0,6.11,29V20.9A16.59,16.59,0,0,0,5.93,18c1.08.07,1.94.11,2.7.11H24.54A16.19,16.19,0,0,0,26.19,18L27,18ZM9.31,6.83a37,37,0,0,1,3.45,4.25l.91,1L9.67,14h9.39A56.5,56.5,0,0,0,21.4,7.48l.22-1.41H8.73Zm.9,12.71V24H23V19.54Zm0,5.9v5H23v-5Z"/><path d="M9.35,53.58l-.76.72a31.77,31.77,0,0,1-5.11,5l-.83.72L.13,56.39l1.12-.29A38.52,38.52,0,0,0,7.65,53l.72-.57Zm11.48-7.41a19.37,19.37,0,0,0,2.7-.11,15.76,15.76,0,0,0-.18,2.88v7.23a15.76,15.76,0,0,0,.18,2.88A21.12,21.12,0,0,0,21.4,59H18.52v3.27H30.08a15.21,15.21,0,0,0,2.16-.14v1.73a14.91,14.91,0,0,0-2.16-.15H19.6a27.79,27.79,0,0,0,11.31,5.76l1.72.29-2.77,4.21-1.26-.76a28.28,28.28,0,0,1-10.08-8.45v7.66a15.5,15.5,0,0,0,.18,2.16H14.24l0-.36a11,11,0,0,0,.14-1.8V66.43A31.76,31.76,0,0,1,2,73.85l-1.18.47L.24,73.13l1.26-.47a28.84,28.84,0,0,0,10.08-9H2.79c-.75,0-.82,0-1.87.15V62.08a15.21,15.21,0,0,0,2.16.14H14.42V59H11.94c-.94,0-1.26,0-2.23.1a16.15,16.15,0,0,0,.18-2.88V48.94a13.28,13.28,0,0,0-.18-2.88,24.84,24.84,0,0,0,2.7.11H14a23.48,23.48,0,0,0,.83-3.28l.1-1.11,5,.9-1,.79c-.79.83-1.91,1.91-2.81,2.7Zm-18-.94a49.73,49.73,0,0,1,5.08,2.63l.9.43-3.32,3.6-.5-1a33.92,33.92,0,0,0-3.35-4.5l-.72-.68,1-1.05Zm10.73,2.38v4.1h6.12v-4.1Zm0,5.54v4.36h6.12V53.15Zm19.26-5.43-1,.46a29.22,29.22,0,0,1-6,2.77l-.83.44-.86-1.23.75-.54a27.06,27.06,0,0,0,3.85-4.32l.51-.93ZM25.8,53a45.22,45.22,0,0,1,5.94,2.84l1.08.4-3,3.74-.57-.86a46.83,46.83,0,0,0-4.21-4.75l-.87-.72L25,52.54Z"/></svg>
+  <div class="jacket">
+    <button type="button" class="jacket__play" aria-label="音楽を再生する"></button>
+    <svg xmlns="http://www.w3.org/2000/svg" width="33" height="75" viewBox="0 0 33 75" class="jacket__logo"><path d="M14.28,2.33A11.24,11.24,0,0,0,14.1.17h4.53a14.76,14.76,0,0,0-.18,2.16V4.64h9.69a17.24,17.24,0,0,0,2.15-.11V6.18c-.36,0-.5-.07-.68-.07l-.5,0H22L26.37,7.8l-.93,1a57.71,57.71,0,0,1-4.22,5L21,14h9a17.85,17.85,0,0,0,2.16-.1v1.65c-.36,0-.51-.07-.69-.07l-.5,0H2.79A14,14,0,0,0,1,15.54V13.89a13.32,13.32,0,0,0,2.15.1H9.09L9,12.81A39.5,39.5,0,0,0,7.8,7.69l-.43-1,1.11-.62H4.67a14,14,0,0,0-1.8.11V4.53A12.18,12.18,0,0,0,5,4.64h9.25ZM27.24,18a15.92,15.92,0,0,0-.18,2.91V29A16.3,16.3,0,0,0,27.24,32l-.94,0a17.44,17.44,0,0,0-1.76-.07H8.48l-.9,0a5,5,0,0,0-.65,0c-.64,0-.68,0-1,0A16.78,16.78,0,0,0,6.11,29V20.9A16.59,16.59,0,0,0,5.93,18c1.08.07,1.94.11,2.7.11H24.54A16.19,16.19,0,0,0,26.19,18L27,18ZM9.31,6.83a37,37,0,0,1,3.45,4.25l.91,1L9.67,14h9.39A56.5,56.5,0,0,0,21.4,7.48l.22-1.41H8.73Zm.9,12.71V24H23V19.54Zm0,5.9v5H23v-5Z"/><path d="M9.35,53.58l-.76.72a31.77,31.77,0,0,1-5.11,5l-.83.72L.13,56.39l1.12-.29A38.52,38.52,0,0,0,7.65,53l.72-.57Zm11.48-7.41a19.37,19.37,0,0,0,2.7-.11,15.76,15.76,0,0,0-.18,2.88v7.23a15.76,15.76,0,0,0,.18,2.88A21.12,21.12,0,0,0,21.4,59H18.52v3.27H30.08a15.21,15.21,0,0,0,2.16-.14v1.73a14.91,14.91,0,0,0-2.16-.15H19.6a27.79,27.79,0,0,0,11.31,5.76l1.72.29-2.77,4.21-1.26-.76a28.28,28.28,0,0,1-10.08-8.45v7.66a15.5,15.5,0,0,0,.18,2.16H14.24l0-.36a11,11,0,0,0,.14-1.8V66.43A31.76,31.76,0,0,1,2,73.85l-1.18.47L.24,73.13l1.26-.47a28.84,28.84,0,0,0,10.08-9H2.79c-.75,0-.82,0-1.87.15V62.08a15.21,15.21,0,0,0,2.16.14H14.42V59H11.94c-.94,0-1.26,0-2.23.1a16.15,16.15,0,0,0,.18-2.88V48.94a13.28,13.28,0,0,0-.18-2.88,24.84,24.84,0,0,0,2.7.11H14a23.48,23.48,0,0,0,.83-3.28l.1-1.11,5,.9-1,.79c-.79.83-1.91,1.91-2.81,2.7Zm-18-.94a49.73,49.73,0,0,1,5.08,2.63l.9.43-3.32,3.6-.5-1a33.92,33.92,0,0,0-3.35-4.5l-.72-.68,1-1.05Zm10.73,2.38v4.1h6.12v-4.1Zm0,5.54v4.36h6.12V53.15Zm19.26-5.43-1,.46a29.22,29.22,0,0,1-6,2.77l-.83.44-.86-1.23.75-.54a27.06,27.06,0,0,0,3.85-4.32l.51-.93ZM25.8,53a45.22,45.22,0,0,1,5.94,2.84l1.08.4-3,3.74-.57-.86a46.83,46.83,0,0,0-4.21-4.75l-.87-.72L25,52.54Z"/></svg>
   </div>
-  <div class="b">
-    <div class="c">
-      <ul>
-        <li>わからないけどわかる</li>
-        <li>平凡な暮らし</li>
-        <li>半乾きのタオル</li>
-        <li>アウトローな同居人</li>
-        <li>顔見知りの他人</li>
-        <li>朝ドラが日課</li>
-        <li>三日目の牡蠣</li>
-        <li>覚えのある腹痛</li>
-        <li>スマホで見る花火</li>
+  <div class="poem">
+    <div class="poem__inner">
+      <ul class="poem__list">
+        <li class="poem__item">わからないけどわかる</li>
+        <li class="poem__item">平凡な暮らし</li>
+        <li class="poem__item">半乾きのタオル</li>
+        <li class="poem__item">アウトローな同居人</li>
+        <li class="poem__item">顔見知りの他人</li>
+        <li class="poem__item">朝ドラが日課</li>
+        <li class="poem__item">三日目の牡蠣</li>
+        <li class="poem__item">覚えのある腹痛</li>
+        <li class="poem__item">スマホで見る花火</li>
       </ul>
-      <ul>
-        <li>つり革を裏返す仕事</li>
-        <li>なくならない無断欠勤</li>
-        <li>反省の空気椅子</li>
-        <li>喜びの現地解散</li>
-        <li>募る将来への不安</li>
-        <li>束の間の貯蓄</li>
-        <li>年の瀬に散財</li>
-        <li>納車日に骨折</li>
-        <li>バランスのとれた食事</li>
+      <ul class="poem__list">
+        <li class="poem__item">つり革を裏返す仕事</li>
+        <li class="poem__item">なくならない無断欠勤</li>
+        <li class="poem__item">反省の空気椅子</li>
+        <li class="poem__item">喜びの現地解散</li>
+        <li class="poem__item">募る将来への不安</li>
+        <li class="poem__item">束の間の貯蓄</li>
+        <li class="poem__item">年の瀬に散財</li>
+        <li class="poem__item">納車日に骨折</li>
+        <li class="poem__item">バランスのとれた食事</li>
       </ul>
-      <ul>
-        <li>雲泥の泥</li>
-        <li>思いつきでリハビリ</li>
-        <li>続かない習慣</li>
-        <li>たたずむヨガマット</li>
-        <li>迫り来る決戦の日</li>
-        <li>二時間に渡る押し問答</li>
-        <li>五分で終わる引き継ぎ</li>
-        <li>あっけなく退職</li>
-        <li>同居人の失踪</li>
+      <ul class="poem__list">
+        <li class="poem__item">雲泥の泥</li>
+        <li class="poem__item">思いつきでリハビリ</li>
+        <li class="poem__item">続かない習慣</li>
+        <li class="poem__item">たたずむヨガマット</li>
+        <li class="poem__item">迫り来る決戦の日</li>
+        <li class="poem__item">二時間に渡る押し問答</li>
+        <li class="poem__item">五分で終わる引き継ぎ</li>
+        <li class="poem__item">あっけなく退職</li>
+        <li class="poem__item">同居人の失踪</li>
       </ul>
-      <ul>
-        <li>自堕落な暮らし</li>
-        <li>のりたまを箱買い</li>
-        <li>期限切れのハチミツ</li>
-        <li>伸びきったペヤング</li>
-        <li>ピザポテトの抜け殻</li>
-        <li>雑煮で乗り切った正月</li>
-        <li>漬物で乗り切った二月</li>
-        <li>再起を誓う三月</li>
+      <ul class="poem__list">
+        <li class="poem__item">自堕落な暮らし</li>
+        <li class="poem__item">のりたまを箱買い</li>
+        <li class="poem__item">期限切れのハチミツ</li>
+        <li class="poem__item">伸びきったペヤング</li>
+        <li class="poem__item">ピザポテトの抜け殻</li>
+        <li class="poem__item">雑煮で乗り切った正月</li>
+        <li class="poem__item">漬物で乗り切った二月</li>
+        <li class="poem__item">再起を誓う三月</li>
       </ul>
-      <ul>
-        <li>周回遅れの学園生活</li>
-        <li>人見知りが口癖</li>
-        <li>馴染めない焦燥感</li>
-        <li>学園祭アレルギー発覚</li>
-        <li>バーベキュー拒否権行使</li>
-        <li>狂い始める生活リズム</li>
-        <li>見失う学問の意義</li>
-        <li>退学を意味する留年</li>
+      <ul class="poem__list">
+        <li class="poem__item">周回遅れの学園生活</li>
+        <li class="poem__item">人見知りが口癖</li>
+        <li class="poem__item">馴染めない焦燥感</li>
+        <li class="poem__item">学園祭アレルギー発覚</li>
+        <li class="poem__item">バーベキュー拒否権行使</li>
+        <li class="poem__item">狂い始める生活リズム</li>
+        <li class="poem__item">見失う学問の意義</li>
+        <li class="poem__item">退学を意味する留年</li>
       </ul>
-      <ul>
-        <li>有り余る時間</li>
-        <li>ひとり映画館</li>
-        <li>ひとりサイゼリヤ</li>
-        <li>ひとりサファリパーク</li>
-        <li>悟りきったライオン</li>
-        <li>かわいいよガゼル</li>
-        <li>馬の耳にモルダウ</li>
-        <li><a href="http://classical-sound.seesaa.net/article/312156442.html" target="_blank" rel="noopener">クラシック名曲サウンドライブラリー</a></li>
+      <ul class="poem__list">
+        <li class="poem__item">有り余る時間</li>
+        <li class="poem__item">ひとり映画館</li>
+        <li class="poem__item">ひとりサイゼリヤ</li>
+        <li class="poem__item">ひとりサファリパーク</li>
+        <li class="poem__item">悟りきったライオン</li>
+        <li class="poem__item">かわいいよガゼル</li>
+        <li class="poem__item">馬の耳にモルダウ</li>
+        <li class="poem__item">
+          <a href="http://classical-sound.seesaa.net/article/312156442.html" target="_blank" rel="noopener" class="poem__link">クラシック名曲サウンドライブラリー</a>
+        </li>
       </ul>
     </div>
   </div>
   <audio src="/audio/moldau.mp3?d=20200322" loop preload="none"></audio>
   <script>
     var body = document.body
-    var a = document.querySelector('.a')
     var audio = document.querySelector('audio')
-    var button = document.querySelector('button')
+    var playButton = document.querySelector('.jacket__play')
+    var jacket = document.querySelector('.jacket')
+    var visibleClass = 'is-visible'
     var playingClass = 'is-playing'
     var grabClass = 'is-grab'
     var grabbingClass = 'is-grabbing'
@@ -311,6 +318,14 @@ button:after {
     var prevY = 0
     var translateX = 0
     var translateY = 0
+
+    function render() {
+      jacket.style.transform = 'translate(' + translateX + 'px, ' + translateY + 'px)'
+
+      if (isGrabbing) {
+        requestAnimationFrame(render)
+      }
+    }
 
     function mouseMoveHandler(e) {
       handleMove(e.clientX, e.clientY)
@@ -337,6 +352,8 @@ button:after {
       prevX = x
       prevY = y
       body.classList.add(grabbingClass)
+
+      render()
     }
 
     function handleMove(x, y) {
@@ -348,8 +365,6 @@ button:after {
       translateY += y - prevY
       prevX = x
       prevY = y
-
-      a.style.transform = 'translate(' + translateX + 'px, ' + translateY + 'px)'
     }
 
     function handleEnd(x, y) {
@@ -357,13 +372,15 @@ button:after {
       body.classList.remove(grabbingClass)
     }
 
-    document.querySelectorAll('ul').forEach(function(ul) {
-      ul.querySelectorAll('li').forEach(function(li) {
-        ul.appendChild(li.cloneNode(true))
+    function clonePoem() {
+      document.querySelectorAll('.poem__list').forEach(function(list) {
+        list.querySelectorAll('.poem__item').forEach(function(item) {
+          list.appendChild(item.cloneNode(true))
+        })
       })
-    })
+    }
 
-    button.addEventListener('click', function() {
+    playButton.addEventListener('click', function() {
       if (body.classList.contains(playingClass)) {
         audio.pause()
         body.classList.remove(playingClass)
@@ -373,33 +390,35 @@ button:after {
       }
     })
 
-    a.addEventListener('mouseenter', function(e) {
+    jacket.addEventListener('mouseenter', function(e) {
       body.classList.add(grabClass)
     })
 
-    a.addEventListener('mouseleave', function(e) {
+    jacket.addEventListener('mouseleave', function(e) {
       body.classList.remove(grabClass)
     })
 
-    a.addEventListener('mousedown', function(e) {
+    jacket.addEventListener('mousedown', function(e) {
       handleStart(e.clientX, e.clientY)
       body.addEventListener('mousemove', mouseMoveHandler)
       body.addEventListener('mouseup', mouseUpHandler)
     })
 
-    a.addEventListener('touchstart', function(e) {
+    jacket.addEventListener('touchstart', function(e) {
       handleStart(e.changedTouches[0].clientX, e.changedTouches[0].clientY)
       body.addEventListener('touchmove', touchMoveHandler)
       body.addEventListener('touchend', touchEndHandler)
     })
 
-    a.addEventListener('contextmenu', function(e) {
+    jacket.addEventListener('contextmenu', function(e) {
       e.preventDefault()
     })
 
+    clonePoem()
+
     setTimeout(function() {
-      document.body.classList.add('wakaru')
-    }, 600)
+      document.body.classList.add(visibleClass)
+    }, 800)
   </script>
 </body>
 </html>
