ループずれてた

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 *:before,
 *:after {
   margin: 0;
-  bottom: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 html,
@@ -199,11 +199,11 @@ body.is-playing .jacket__play:after {
   display: inline-flex;
   white-space: nowrap;
   list-style-type: none;
-  animation: kimura-kaela 59s -2s linear infinite;
+  animation: kimura-kaela 59s 0s linear infinite;
   will-change: transform;
 }
 .poem__item {
-  margin: 0 0.2em;
+  padding: 0 0.2em;
   font-size: calc(100vh / (6 * 3.8));
   letter-spacing: 0.18em;
   line-height: 2.3;
